# KokkosReducer

./: CMakeLists.txt  README.md
src/: Arrays.hpp  CompensatedReducer.hpp  KahanReducer.hpp  WorstCaseArrays.hpp  main.cxx
utils/: floats_gen.py  iter.py  numbers.py
